Fix scaling when not aligning, UI improvements

--- a/src/style.scss
+++ b/src/style.scss
@@ -110,3 +110,7 @@ input.no-arrows {
       border: 3px solid red;
   }
 }
+
+.inline {
+  display: inline;
+}
